--- a/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
+++ b/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
@@ -109,3 +109,120 @@
   urldate = {2025-04-27},
   file = {C:\Users\puipp\Zotero\storage\G3SMIFUN\index.html}
 }
+//TB2
+
+@online{GoExampleHTTP,
+  title = {Go by {{Example}}: {{HTTP Server}}},
+  url = {https://gobyexample.com/http-server},
+  urldate = {2025-06-17},
+  file = {C:\Users\puipp\Zotero\storage\99HBS6QY\http-server.html}
+}
+
+@online{HowUseMQTT2022,
+  title = {How to Use {{MQTT}} in {{Golang}}},
+  date = {2022-06-15},
+  url = {https://dev.to/emqx/how-to-use-mqtt-in-golang-2oek},
+  urldate = {2025-06-17},
+  abstract = {Golang is a statically strongly typed, compiled, concurrent, and garbage-collecting programming...},
+  langid = {english},
+  organization = {DEV Community},
+  file = {C:\Users\puipp\Zotero\storage\GVP4KY5B\how-to-use-mqtt-in-golang-2oek.html}
+}
+
+@online{HttpPackageNet,
+  title = {Http Package - Net/Http - {{Go Packages}}},
+  url = {https://pkg.go.dev/net/http},
+  urldate = {2025-06-17},
+  file = {C:\Users\puipp\Zotero\storage\TXA33JDY\http.html}
+}
+
+@software{MochimqttServer2025,
+  title = {Mochi-Mqtt/Server},
+  date = {2025-06-17T01:28:02Z},
+  origdate = {2019-09-21T11:56:13Z},
+  url = {https://github.com/mochi-mqtt/server},
+  urldate = {2025-06-17},
+  abstract = {The fully compliant, embeddable high-performance Go MQTT v5 server for IoT, smarthome, and pubsub},
+  organization = {Mochi MQTT},
+  keywords = {golang,golang-library,golang-package,iot,mqtt,mqtt-broker,mqtt-server,mqtt-smarthome,mqtt3,mqtt5,mqttv5,tcp,websocket}
+}
+
+@online{MQTTCoolTestClient,
+  title = {{{MQTT}}.{{Cool Test Client}}},
+  url = {https://mqtt.aarsoftwareserver.com:444/test_client/},
+  urldate = {2025-06-17},
+  file = {C:\Users\puipp\Zotero\storage\QH7DQZIM\test_client.html}
+}
+
+@online{MqttPackageGithubcom,
+  title = {Mqtt Package - Github.Com/Eclipse/Paho.Mqtt.Golang - {{Go Packages}}},
+  url = {https://pkg.go.dev/github.com/eclipse/paho.mqtt.golang@v1.5.0#Client},
+  urldate = {2025-06-17},
+  file = {C:\Users\puipp\Zotero\storage\AR2YJXC2\paho.mqtt.golang@v1.5.html}
+}
+//ok
+@software{nicholsonCraignicholsonSimplehttp2023,
+  title = {Craignicholson/Simplehttp},
+  author = {Nicholson, Craig},
+  date = {2023-02-14T08:52:43Z},
+  origdate = {2015-07-26T14:52:53Z},
+  url = {https://github.com/craignicholson/simplehttp},
+  urldate = {2025-06-18},
+  abstract = {Simple http server to test docker and golang deployment}
+}
+//ok
+@online{soysouvanhClientsServeursHTTP, 
+  title = {Clients et Serveurs HTTP en Go : Guide Complet},
+  shorttitle = {Clients et Serveurs HTTP en Go},
+  author = {SOYSOUVANH, Vincent},
+  url = {https://certiquizz.com/fr/cours/programmation/go/go-beyond-maitrisez-go-pour-l-innovation-cloud-ia-et-devops/http-client-et-serveur},
+  urldate = {2025-06-17},
+  abstract = {Créez des clients et serveurs HTTP robustes en Go. Explorez requêtes, réponses, gestionnaires, middleware, serveurs HTTPS et bonnes pratiques pour des applications web performantes.},
+  langid = {french}
+}
+//ok
+@online{HttpPackageNetb,
+  title = {Http Package - Net/Http - {{Go Packages}}},
+  url = {https://pkg.go.dev/net/http#ListenAndServe},
+  urldate = {2025-06-18},
+  file = {C:\Users\puipp\Zotero\storage\HJXC2GYF\http.html}
+}
+
+@Inbook{Sharma2019,
+author="Sharma, Neha
+and Shamkuwar, Madhavi
+and Singh, Inderjit",
+editor="Balas, Valentina E.
+and Solanki, Vijender Kumar
+and Kumar, Raghvendra
+and Khari, Manju",
+title="The History, Present and Future with IoT",
+bookTitle="Internet of Things and Big Data Analytics for Smart Generation",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="27--51",
+abstract="Human beings quest for making comfortable life is due to their inquisitiveness about technical arena. Over the last few decades, mankind had experienced technical transformational journey with the inventions of new technology frontiers. These frontiers have interacted with human beings and performed every possible work in shorter period of time and with a much greater accuracy. With the advent of `Smart Concepts', the world is now becoming more connected. Precisely termed as hyper-connected world. The smart concepts includes smart phones, smart devices, smart applications and smart cities. These smarter concepts forms an ecosystem of devices whose basic work is to connect various devices to send and receive data. Internet of Things is one the dominating technology that keeps eye on the connected smart devices. Internet of Things has bought applications from fiction to fact enabling fourth industrial revolution. It has laid an incredible impact on the technical, social, economic and on the lives of human and machines. Scientists claim that the potential benefit derived from this technology will sprout a foreseeable future where the smart objects sense, think and act. Internet of Things is the trending technology and embodies various concepts such as fog computing, edge computing, communication protocols, electronic devices, sensors, geo-location etc. The chapter presents the comprehensive information about the evolution of Internet of Things, its present developments to its futuristic applications.",
+isbn="978-3-030-04203-5",
+doi="10.1007/978-3-030-04203-5_3",
+url="https://doi.org/10.1007/978-3-030-04203-5_3"
+}
+
+
+@Article{s23167194,
+AUTHOR = {Chataut, Robin and Phoummalayvane, Alex and Akl, Robert},
+TITLE = {Unleashing the Power of IoT: A Comprehensive Review of IoT Applications and Future Prospects in Healthcare, Agriculture, Smart Homes, Smart Cities, and Industry 4.0},
+JOURNAL = {Sensors},
+VOLUME = {23},
+YEAR = {2023},
+NUMBER = {16},
+ARTICLE-NUMBER = {7194},
+URL = {https://www.mdpi.com/1424-8220/23/16/7194},
+PubMedID = {37631731},
+ISSN = {1424-8220},
+ABSTRACT = {The Internet of Things (IoT) technology and devices represent an exciting field in computer science that is rapidly emerging worldwide. The demand for automation and efficiency has also been a contributing factor to the advancements in this technology. The proliferation of IoT devices coincides with advancements in wireless networking technologies, driven by the enhanced connectivity of the internet. Today, nearly any everyday object can be connected to the network, reflecting the growing demand for automation and efficiency. This paper reviews the emergence of IoT devices, analyzed their common applications, and explored the future prospects in this promising field of computer science. The examined applications encompass healthcare, agriculture, and smart cities. Although IoT technology exhibits similar deployment trends, this paper will explore different fields to discern the subtle nuances that exist among them. To comprehend the future of IoT, it is essential to comprehend the driving forces behind its advancements in various industries. By gaining a better understanding of the emergence of IoT devices, readers will develop insights into the factors that have propelled their growth and the conditions that led to technological advancements. Given the rapid pace at which IoT technology is advancing, this paper provides researchers with a deeper understanding of the factors that have brought us to this point and the ongoing efforts that are actively shaping the future of IoT. By offering a comprehensive analysis of the current landscape and potential future developments, this paper serves as a valuable resource to researchers seeking to contribute to and navigate the ever-evolving IoT ecosystem.},
+DOI = {10.3390/s23167194}
+}
+
+
+
