--- a/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
+++ b/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
@@ -224,5 +224,46 @@ ABSTRACT = {The Internet of Things (IoT) technology and devices represent an exc
 DOI = {10.3390/s23167194}
 }
 
+//ok
+@online{CustomNodes2025,
+  title = {Custom {{Nodes}}},
+  date = {2025-06-24},
+  url = {https://reactflow.dev/examples/nodes/custom-node},
+  urldate = {2025-06-30},
+  abstract = {Display any content inside of a node},
+  langid = {english},
+  organization = {React Flow},
+  file = {C:\Users\puipp\Zotero\storage\NBE53TZ3\custom-node.html}
+}
 
+
+//ok
+@online{CSSButtons,
+  title = {{{CSS Buttons}}},
+  url = {https://www.w3schools.com/css/css3_buttons.asp},
+  urldate = {2025-07-01},
+  abstract = {W3Schools offers free online tutorials, references and exercises in all the major languages of the web. Covering popular subjects like HTML, CSS, JavaScript, Python, SQL, Java, and many, many more.},
+  langid = {american},
+  file = {C:\Users\puipp\Zotero\storage\K2G9E6E8\css3_buttons.html}
+}
+
+//ok
+@online{UsingTypeScriptReact,
+  title = {Using {{TypeScript}} – {{React}}},
+  url = {https://react.dev/learn/typescript},
+  urldate = {2025-07-01},
+  abstract = {The library for web and native user interfaces},
+  langid = {english},
+  file = {C:\Users\puipp\Zotero\storage\95HLTN95\typescript.html}
+}
+//ok
+@online{Quickstart2025,
+  title = {Quickstart},
+  date = {2025-06-24},
+  url = {https://reactflow.dev/learn},
+  urldate = {2025-07-01},
+  abstract = {React Flow quickstart that shows how to install the package, use it and where to find example apps},
+  langid = {english},
+  organization = {React Flow}
+}
 
