--- a/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
+++ b/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
@@ -266,4 +266,62 @@ DOI = {10.3390/s23167194}
   langid = {english},
   organization = {React Flow}
 }
+//ok
+@online{SHELLYBUTTON1USER,
+  title = {{{SHELLY BUTTON1 USER MANUAL Pdf Download}} | {{ManualsLib}}},
+  url = {https://www.manualslib.com/manual/2017524/Shelly-Button1.html},
+  urldate = {2025-07-22},
+  file = {C:\Users\puipp\Zotero\storage\KHEB8GQA\Shelly-Button1.html}
+}
 
+
+@online{CodesFonctionsModbus,
+  title = {Les Codes Fonctions {{Modbus}}},
+  url = {https://yutec.fr/automatisme/protocole-de-communication/fonctions-modbus/},
+  urldate = {2025-07-21},
+  file = {C:\Users\puipp\Zotero\storage\Z9QGCZNL\fonctions-modbus.html}
+}
+
+@software{GoburrowModbus2025,
+  title = {Goburrow/Modbus},
+  date = {2025-07-19T16:03:04Z},
+  origdate = {2014-10-18T23:49:39Z},
+  url = {https://github.com/goburrow/modbus},
+  urldate = {2025-07-21},
+  abstract = {Fault-tolerant implementation of modbus protocol in Go (golang)},
+  organization = {GoBurrow}
+}
+
+//ok
+@online{DocumentationShellyBulb,
+  title = {Documentation about {{Shelly Bulb Duo RGBW}}},
+  url = {https://www.shelly.com/blogs/documentation/shelly-bulb-duo-rgbw},
+  urldate = {2025-07-22},
+  abstract = {Information and documentation about Shelly Bulb Duo RGBW. Learn more about the functionality of this Shelly product in our Documentation article.},
+  langid = {english},
+  organization = {Shelly Europe}
+}
+
+//ok
+@online{WebhooksHTTPSRequests,
+  title = {Webhooks / {{HTTP}}({{S}}) Requests – {{The}} Unofficial {{Shelly}} Guide!},
+  url = {https://shelly.guide/webhooks-https-requests/},
+  urldate = {2025-07-22},
+  langid = {american}
+}
+
+@online{ModeDemploiShelly,
+  title = {Mode d'emploi {{Shelly H}}\&{{T}} (2 Des Pages)},
+  url = {https://www.modesdemploi.fr/shelly/ht/mode-d-emploi},
+  urldate = {2025-07-22},
+  file = {C:\Users\puipp\Zotero\storage\8EE5WIZ4\mode-d-emploi.html}
+}
+
+@online{MQTTShellyTechnical,
+  title = {{{MQTT}} | {{Shelly Technical Documentation}}},
+  url = {https://shelly-api-docs.shelly.cloud/gen2/ComponentsAndServices/Mqtt/},
+  urldate = {2025-07-22},
+  abstract = {The MQTT component handles configuration and status of the outbound MQTT connection. The supported Quality of service level is 1, which guarantees that a message is delivered at least one time to the receiver. Here, you can find how to configure your device to connect to an MQTT server.},
+  langid = {english},
+  file = {C:\Users\puipp\Zotero\storage\HSNRSDX8\Mqtt.html}
+}
