--- a/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
+++ b/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
@@ -325,3 +325,13 @@ DOI = {10.3390/s23167194}
   langid = {english},
   file = {C:\Users\puipp\Zotero\storage\HSNRSDX8\Mqtt.html}
 }
+
+//ok
+@online{ReactRouterUseNavigate,
+  title = {React {{Router}} / {{useNavigate}} — {{DevDocs}}},
+  url = {https://devdocs.io/react_router/hooks/use-navigate},
+  urldate = {2025-07-23},
+  abstract = {React Router 6.4.1 API documentation with instant search, offline support, keyboard shortcuts, mobile version, and more.},
+  langid = {english},
+  file = {C:\Users\puipp\Zotero\storage\P92P5ZF7\use-navigate.html}
+}
