--- a/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
+++ b/Documentation/Rapport/hei-synd-thesis-main/template/tail/bibliography.bib
@@ -335,3 +335,14 @@ DOI = {10.3390/s23167194}
   langid = {english},
   file = {C:\Users\puipp\Zotero\storage\P92P5ZF7\use-navigate.html}
 }
+//ok
+@online{PreventingCycles2025,
+  title = {Preventing {{Cycles}}},
+  date = {2025-07-16},
+  url = {https://reactflow.dev/examples/interaction/prevent-cycles},
+  urldate = {2025-07-30},
+  abstract = {Check if a new connection would cause a cycle in the graph},
+  langid = {english},
+  organization = {React Flow},
+  file = {C:\Users\puipp\Zotero\storage\GJVCSF22\prevent-cycles.html}
+}
